# dicekeys-android

./: .gitignore  .gitmodules  README.md  build.gradle  extra.md  gradle.properties  keystore.properties.template  packages.md  settings.gradle
.github/workflows/: android-unit-tests.yml
api/: build.gradle
api/src/main/: AndroidManifest.xml
api/src/sample/: ApiSamples.kt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: box_bottom_all_dice_in_place1.xml  hand_with_sticker.xml  ic_backup_to_dicekey.xml  ic_baseline_keyboard_double_arrow_down_24.xml  ic_dicekey_icon.xml  ic_phonelet.xml  ic_phonelet_24.xml  ic_scanning_side_view.xml  ic_secret.xml  ic_secret_with_arrow.xml  ic_usb_key.xml  rounded_bottom_sheet.xml  scanning_overlay.xml  shaking_bag.xml
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
dicekey/: build.gradle
dicekeysapp/: build.gradle
dicekeysapp/src/main/: AndroidManifest.xml
fidowriter/: build.gradle
fidowriter/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
keysqr/: build.gradle
keysqr/src/main/: AndroidManifest.xml
keysqr/src/main/cpp/: CMakeLists.txt  keysqr-jni.cpp
read/: build.gradle
read/src/main/: AndroidManifest.xml
read/src/main/cpp/: CMakeLists.txt  native-object-jni.hpp  read-dicekey-jni.cpp  read-keysqr-jni.cpp
reader/: build.gradle
reader/src/main/: AndroidManifest.xml
readkeysqr/: build.gradle
readkeysqr/src/main/: AndroidManifest.xml
readkeysqr/src/main/cpp/: CMakeLists.txt  keysqr-jni.cpp  read-keysqr-jni.cpp
seeded/: build.gradle
seeded/src/main/: AndroidManifest.xml
seeded/src/main/cpp/: CMakeLists.txt  java-throw-exception.cpp  java-throw-exception.h  lib-seeded-jni.cpp  native-object-jni.h  packaged-sealed-message-jni.cpp  password-jni.cpp  private-key-jni.cpp  public-key-jni.cpp  public-private-key-pair-jni.cpp  sealing-key-jni.cpp  secret-jni.cpp  seed-jni.cpp  signature-verification-key-jni.cpp  signing-key-jni.cpp  symmetric-key-jni.cpp  unsealing-key-jni.cpp
testapp/: build.gradle
testapp/src/main/: AndroidManifest.xml
trustedapp/: build.gradle
trustedapp/src/main/: AndroidManifest.xml
(+518 files in other folders)
